--- a/crypto_discord_theme/base.css
+++ b/crypto_discord_theme/base.css
@@ -606,17 +606,20 @@
   background: var(--background-1);
 }
 #app-mount .chat-3bRxxu .messagesWrapper-3lZDfY .cozyMessage-3V1Y8y.groupStart-23k01U {
-  border-radius: 0px;
-  margin-top: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+    border-radius: 0px;
+    margin-top: 20px;
+    padding-top: 5px;
+    padding-bottom: 20px;
+    padding-left: 70px;
 }
 #app-mount .chat-3bRxxu .messagesWrapper-3lZDfY .cozyMessage-3V1Y8y.groupStart-23k01U + .cozyMessage-3V1Y8y:not(.groupStart-23k01U) {
-  margin-top: -22px;
+    margin-top: -22px;
+    padding-left: 70px;
 }
 #app-mount .chat-3bRxxu .messagesWrapper-3lZDfY .cozyMessage-3V1Y8y:not(.groupStart-23k01U) {
-  padding-bottom: 20px;
-  margin-top: -22px;
+    padding-bottom: 20px;
+    margin-top: -22px;
+    padding-left: 70px;
 }
 #app-mount .chat-3bRxxu .messagesWrapper-3lZDfY .cozyMessage-3V1Y8y.mentioned-xhSam7 > div {
   position: relative;
