mention tag avatar position fix

--- a/crypto_discord_theme/base.css
+++ b/crypto_discord_theme/base.css
@@ -623,6 +623,7 @@
 }
 #app-mount .chat-3bRxxu .messagesWrapper-3lZDfY .cozyMessage-3V1Y8y.mentioned-xhSam7 > div {
   position: relative;
+  padding-left: 70px;
   z-index: 1;
 }
 #app-mount .chat-3bRxxu .messagesWrapper-3lZDfY .cozyMessage-3V1Y8y.mentioned-xhSam7::after {
