--- a/crypto_discord_theme/base.css
+++ b/crypto_discord_theme/base.css
@@ -1908,3 +1908,7 @@ html.theme-light .wrapper-2ZbzR9 .slide-2pHaq5 .footer-3rDWdC {
   background: var(--message-box);
   box-shadow: var(--box-shadow);
 }
+
+.container-3w7J-x {
+  background: transparent;
+}
